--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ jobs:
   - script: brew update
   - script: brew install libpng ragel
   - script: node --version
-  # - template: .ci/restore-build-cache.yml
+  - template: .ci/restore-build-cache.yml
   - template: .ci/esy-check-hygiene.yml
   - script: ls -lA /Users/runner/.esy
   - script: ls -lA /Users/runner/runners
@@ -71,7 +71,7 @@ jobs:
   - script: brew update
   - script: brew install libpng ragel
   - script: node --version
-  # - template: .ci/restore-build-cache.yml
+  - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
   - template: .ci/esy-bench.yml
   - template: .ci/publish-build-cache.yml
