--- a/src/Native/dune
+++ b/src/Native/dune
@@ -4,11 +4,11 @@
     (preprocess (pps lwt_ppx))
     (library_flags (:include flags.sexp))
     (js_of_ocaml (javascript_files dialog.js))
-    (c_names dialog_cocoa dialog_win32 dialog_gtk)
-    (cxx_names dialog)
+    (c_names dialog_cocoa dialog_win32 dialog_gtk icon_progress_cocoa)
+    (cxx_names dialog icon_progress)
     (c_flags (:include c_flags.sexp))
     (c_library_flags (:include c_library_flags.sexp))
-    (libraries sdl2))
+    (libraries sdl2 Revery_Core))
 
 (rule
 (targets flags.sexp c_flags.sexp c_library_flags.sexp)
