--- a/src/Native/dune
+++ b/src/Native/dune
@@ -12,6 +12,6 @@
 (copy_files cocoa/*)
 
 (rule
-(targets flags.sexp c_flags.sexp cxx_flags.sexp c_library_flags.sexp)
+(targets flags.sexp c_flags.sexp c_library_flags.sexp)
 (deps (:discover config/discover.exe))
 (action (run %{discover})))
