--- a/src/Native/dune
+++ b/src/Native/dune
@@ -3,7 +3,7 @@
     (public_name Revery.Native)
     (preprocess (pps lwt_ppx))
     (library_flags (:include flags.sexp))
-    (js_of_ocaml (javascript_files dialog.js))
+    (js_of_ocaml (javascript_files dialog.js menu.js))
     (c_names
         Revery_Native
         dialog dialog_cocoa dialog_win32 dialog_gtk
@@ -12,7 +12,7 @@
         shell shell_cocoa shell_gtk shell_win32
         utilities
         ReveryAppDelegate ReveryAppDelegate_func
-        ReveryProgressBar)
+        ReveryProgressBar menu)
     (c_flags :standard -Wall -Wextra -Werror (:include c_flags.sexp))
     (c_library_flags (:include c_library_flags.sexp))
     (libraries sdl2))
