--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "reason-sdl2": "^2.10.3011"
   },
   "resolutions": {
-    "@opam/cmdliner": "1.0.2"
+    "@opam/cmdliner": "1.0.2",
+    "yarn-pkg-config": "esy-ocaml/yarn-pkg-config#34947ac97"
   },
   "devDependencies": {
     "ocaml": ">=4.6.0 <4.8.0",
