--- a/.ci/publish-build-cache.yml
+++ b/.ci/publish-build-cache.yml
@@ -1,11 +1,11 @@
 # Steps for publishing project cache
 
 steps:
-  - bash: 'mkdir -p $(STAGING_DIRECTORY_UNIX)'
+  - bash: 'mkdir -p $(STAGING_DIRECTORY)'
     condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
     displayName: '[Cache][Publish] Create cache directory'
 
-  - bash: 'cd $(ESY__CACHE_INSTALL_PATH) && tar -czf $(STAGING_DIRECTORY_UNIX)/esy-cache.tar .'
+  - bash: 'cd $(ESY__CACHE_INSTALL_PATH) && tar -czf $(STAGING_DIRECTORY)/esy-cache.tar .'
     workingDirectory: ''
     condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
     displayName: '[Cache][Publish] Tar esy cache directory'
