--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "reason-font-manager": "^2.0.0",
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
-    "reason-sdl2": "^2.10.3011"
+    "reason-sdl2": "^2.10.3011",
+    "esy-skia": "github:revery-ui/esy-skia#ff2e46d"
   },
   "resolutions": {
     "@opam/cmdliner": "1.0.2",
-    "yarn-pkg-config": "esy-ocaml/yarn-pkg-config#34947ac97"
+    "yarn-pkg-config": "esy-ocaml/yarn-pkg-config#34947ac97",
+    "esy-cmake": "prometheansacrifice/esy-cmake#2a47392def755"
   },
   "devDependencies": {
     "ocaml": ">=4.6.0 <4.8.0",
