--- a/.ci/publish-build-cache.yml
+++ b/.ci/publish-build-cache.yml
@@ -2,21 +2,29 @@
 
 steps:
   - bash: 'mkdir -p $(STAGING_DIRECTORY)'
-    condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     displayName: '[Cache][Publish] Create cache directory'
 
-  - bash: 'cd $(ESY__CACHE_INSTALL_PATH) && tar -czf $(STAGING_DIRECTORY)/esy-cache.tar .'
+  - bash: |
+      cd $(ESY__CACHE_INSTALL_PATH)
+      pwd
+      STDIR=$STAGING_DIRECTORY
+      if [ "$AGENT_OS" == "Windows_NT" ]; then
+        STDIR=$( cygpath --unix --absolute "$STAGING_DIRECTORY")
+      fi
+      echo "STDIR: $STDIR"
+      tar -czf "$STDIR/esy-cache.tar" .
     workingDirectory: ''
-    condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     displayName: '[Cache][Publish] Tar esy cache directory'
 
-  # - bash: 'cd $(ESY__NPM_ROOT) && tar -czf $(STAGING_DIRECTORY_UNIX)/npm-cache.tar .'
+  # - bash: 'cd $(ESY__NPM_ROOT) && tar -czf $(STAGING_DIRECTORY)/npm-cache.tar .'
   #   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   #   displayName: '[Cache][Publish] Tar npm cache directory'
 
   - task: PublishBuildArtifacts@1
     displayName: '[Cache][Publish] Upload tarball'
-    condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     inputs:
         pathToPublish: '$(STAGING_DIRECTORY)'
         artifactName: 'cache-$(Agent.OS)-install'
