Add build-env command

--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -5,6 +5,8 @@ steps:
     displayName: 'npm install -g esy@0.5.8'
   - script: esy install
     displayName: 'esy install'
+  - script: esy build-env
+    displayName: 'esy build-env'
   - script: esy build
     displayName: 'esy build'
   - script: esy @test install
