--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,8 @@ jobs:
   - template: .ci/use-node.yml
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
+  - script: esy build pkg-config --list-all
+    displayName: "esy build pkg-config --list-all"
   - template: .ci/esy-bench.yml
   - template: .ci/create-docs.yml
   - template: .ci/publish-build-cache.yml
