--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,13 @@ jobs:
   - script: sudo apt-get install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libgl1-mesa-dev libglu1-mesa-dev mesa-utils mesa-utils-extra ragel libgtk-3-dev
   - script: pkg-config --libs --cflags gtk+-3.0
   - script: echo $PKG_CONFIG_PATH
+  - script: pkg-config --list-all
+    displayName: "pkg-config --list-all"
   - template: .ci/use-node.yml
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
+  - script: esy b pkg-config --list-all
+    displayName: "esy b pkg-config --list-all"
   - template: .ci/esy-bench.yml
   - template: .ci/create-docs.yml
   - template: .ci/publish-build-cache.yml
