Add ctypes-foreign, revert azure-pipelines.yml

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "rebez": "github:jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3011",
     "esy-skia": "github:revery-ui/esy-skia#ff2e46d",
-    "@opam/ctypes": "0.15.1"
+    "@opam/ctypes": "0.15.1",
+    "@opam/ctypes-foreign": "0.4.0"
   },
   "resolutions": {
     "@esy-ocaml/libffi": "esy-ocaml/libffi#599bc3567ecf839240977b6d9aaf0b80f983b5aa",
