--- a/src/Draw/dune
+++ b/src/Draw/dune
@@ -1,5 +1,4 @@
 (library
     (name Revery_Draw)
     (public_name Revery.Draw)
-    (preprocess (pps lwt_ppx))
-    (libraries skia brisk-reconciler lwt lwt.unix sdl2 flex fontkit rebez.lib Revery_Core Revery_Math))
+    (libraries skia brisk-reconciler sdl2 flex harfbuzz rebez.lib Revery_Core Revery_Math))
