--- a/src/Font/dune
+++ b/src/Font/dune
@@ -1,5 +1,4 @@
 (library
     (name Revery_Font)
     (public_name Revery.Font)
-    (preprocess (pps lwt_ppx))
-    (libraries reason-font-manager lwt lwt.unix sdl2 flex fontkit rebez.lib Revery_Core Revery_Math))
+    (libraries reason-font-manager sdl2 flex harfbuzz rebez.lib Revery_Core Revery_Math))
