--- a/src/UI_Components/dune
+++ b/src/UI_Components/dune
@@ -2,4 +2,4 @@
     (name Revery_UI_Components)
     (preprocess (pps brisk-reconciler.ppx lwt_ppx))
     (public_name Revery.UI_Components)
-    (libraries lwt lwt.unix sdl2 flex fontkit Revery_Core Revery_Math Revery_UI Revery_UI_Primitives Revery_UI_Hooks))
+    (libraries lwt lwt.unix sdl2 flex Revery_Core Revery_Math Revery_UI Revery_UI_Primitives Revery_UI_Hooks))
