--- a/src/UI_Hooks/dune
+++ b/src/UI_Hooks/dune
@@ -2,4 +2,4 @@
     (name Revery_UI_Hooks)
     (public_name Revery.UI_Hooks)
     (preprocess (pps brisk-reconciler.ppx lwt_ppx))
-    (libraries lwt lwt.unix sdl2 flex fontkit Revery_Core Revery_Math Revery_UI))
+    (libraries lwt lwt.unix sdl2 flex Revery_Core Revery_Math Revery_UI))
