--- a/src/Native/dune
+++ b/src/Native/dune
@@ -1,19 +1,15 @@
 (library
     (name Revery_Native)
     (public_name Revery.Native)
-    (preprocess (pps lwt_ppx ppx_optcomp))
+    (preprocess (pps lwt_ppx))
     (library_flags (:include flags.sexp))
     (js_of_ocaml (javascript_files dialog.js))
-    (c_names dialog dialog_cocoa dialog_win32 dialog_gtk notification notification_cocoa revery_cocoa utilities ReveryAppDelegate)
+    (c_names Revery_Native dialog dialog_cocoa dialog_win32 dialog_gtk notification notification_cocoa revery_cocoa utilities ReveryAppDelegate)
     (c_flags :standard -Wall -Wextra -Werror (:include c_flags.sexp))
     (c_library_flags (:include c_library_flags.sexp))
     (libraries sdl2))
 
 (copy_files cocoa/*)
-(rule
-    (targets config.ml)
-    (deps (:prebuild ../get-os.sh))
-    (action (run sh %{prebuild})))
 
 (rule
 (targets flags.sexp c_flags.sexp c_library_flags.sexp)
