--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test": "esy b dune runtest",
     "format": "esy dune build @fmt --auto-promote",
     "format:windows": "esy b .ci/format.sh",
-    "run": "esy x Examples"
+    "run": "esy x Examples",
+    "run-native": "esy b dune exec examples/Examples.exe",
+    "run-bytecode": "esy b dune exec examples/Examples.bc"
   },
   "homepage": "https://github.com/bryphe/revery#readme",
   "esy": {
