Enable bytecode builds (#693)
* Native/dialog.c: Rename "revery_alertOpenFiles_bytecode" (#691)

Previously this function was called "revery_alertOpenFiles_bytcode" which would result in a build failure using the bytecode backend

* Add esy run-native and esy run-bytecode scripts

--- a/examples/dune
+++ b/examples/dune
@@ -4,7 +4,9 @@
   (pps brisk-reconciler.ppx lwt_ppx))
  (package Revery)
  (public_names Examples)
- (libraries ExampleStubs skia str Revery flex timber))
+ (modes native byte)
+ (ocamlc_flags (:standard -custom))
+ (libraries dynlink ExampleStubs skia str Revery flex timber))
 
 (install
  (section bin)
