--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "build:js": "esy b dune build examples/Examples.bc.js",
     "build:js:release": "esy b dune build examples/Examples.bc.js",
     "test": "esy b dune runtest",
-    "format": "esy dune build @fmt --auto-promote",
-    "format:windows": "esy b .ci/format.sh",
+    "format": "esy bash -c .ci/format.sh",
     "run": "esy x Examples"
   },
   "homepage": "https://github.com/bryphe/revery#readme",
@@ -44,7 +43,8 @@
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3011",
-    "reason-skia": "github:manuhornung/reason-skia#d26e3dd"
+    "reason-skia": "github:manuhornung/reason-skia#d26e3dd",
+    "esy-astyle": "github:zbaylin/esy-astyle#59bc21a"
   },
   "resolutions": {
     "@opam/cmdliner": "1.0.2",
