--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3011",
-    "reason-skia": "github:manuhornung/reason-skia#d26e3dd",
-    "esy-astyle": "github:zbaylin/esy-astyle#59bc21a"
+    "reason-skia": "github:manuhornung/reason-skia#d26e3dd"
   },
   "resolutions": {
     "@opam/cmdliner": "1.0.2",
@@ -56,6 +55,7 @@
   "devDependencies": {
     "ocaml": ">=4.6.0 <4.8.0",
     "@opam/merlin": "^3.3.2",
-    "@opam/dune": "^1.8.0"
+    "@opam/dune": "^1.8.0",
+    "esy-astyle": "github:zbaylin/esy-astyle#59bc21a"
   }
 }
