--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3011",
-    "reason-skia": "github:manuhornung/reason-skia#d26e3dd"
+    "reason-skia": "github:manuhornung/reason-skia#d26e3dd",
+    "revery-text-wrap": "github:ohadrau/revery-text-wrap#2029854"
   },
   "resolutions": {
     "@opam/cmdliner": "1.0.2",
