--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3011",
-    "reason-skia": "github:manuhornung/reason-skia#d26e3dd",
+    "reason-skia": "github:revery-ui/reason-skia#2e189a8",
     "revery-text-wrap": "github:ohadrau/revery-text-wrap#2029854"
   },
   "resolutions": {
     "@opam/cmdliner": "1.0.2",
     "@esy-ocaml/libffi": "esy-ocaml/libffi#599bc3567",
-    "esy-skia": "revery-ui/esy-skia#ff2e46d",
+    "esy-skia": "revery-ui/esy-skia#3b4658d",
     "yarn-pkg-config": "esy-ocaml/yarn-pkg-config#db3a0b6",
     "esy-cmake": "prometheansacrifice/esy-cmake#2a47392def755"
   },
