Add native stub formatting to `esy-format` (#695)
* depended on esy-astyle, modified format script

* changed from google -> java, and 4 spaces

* fixed formatting script to work on WIndows

* update lock files

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "build:js": "esy b dune build examples/Examples.bc.js",
     "build:js:release": "esy b dune build examples/Examples.bc.js",
     "test": "esy b dune runtest",
-    "format": "esy dune build @fmt --auto-promote",
-    "format:windows": "esy b .ci/format.sh",
+    "format": "esy sh .ci/format.sh #{os}",
     "run": "esy x Examples"
   },
   "homepage": "https://github.com/bryphe/revery#readme",
@@ -58,6 +57,7 @@
   "devDependencies": {
     "ocaml": ">=4.6.0 <4.8.0",
     "@opam/merlin": "^3.3.2",
-    "@opam/dune": "^1.8.0"
+    "@opam/dune": "^1.8.0",
+    "esy-astyle": "github:zbaylin/esy-astyle#59bc21a"
   }
 }
