--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,24 @@ jobs:
   - template: .ci/create-docs.yml
   - template: .ci/publish-build-cache.yml
 
+- job: CentOS
+  displayName: 'Linux - CentOS - Docker Image'
+  timeoutInMinutes: 0
+  pool:
+    vmImage: 'Ubuntu 16.04'
+
+  variables:
+    STAGING_DIRECTORY: $(Build.StagingDirectory)
+    ESY__CACHE_INSTALL_PATH: /home/vsts/.esy/3_____________________________________________________________________/i
+    ESY__CACHE_SOURCE_TARBALL_PATH: /home/vsts/.esy/source/i
+    # ESY__NPM_ROOT: /opt/hostedtoolcache/node/8.14.0/x64/lib/node_modules/esy
+
+  steps:
+  - script: docker build -t centos scripts/docker/centos
+    displayName: 'docker build'
+  - script: docker run --rm --mount src=`pwd`,target=/revery,type=bind centos /bin/bash -c 'cd revery && ls -a'
+  - script: docker run --cap-add SYS_ADMIN --device /dev/fuse --security-opt apparmor:unconfined --rm --mount src=`pwd`,target=/revery,type=bind centos /bin/bash -c 'cd revery && ./scripts/docker-build.sh'
+
 - job: Hygiene_Checks
   displayName: 'Hygiene Checks'
   timeoutInMinutes: 0
