Moves dir and files for the POC.

--- a/examples/stubs/dune
+++ b/examples/stubs/dune
@@ -1,5 +1,6 @@
-(library 
+(library
   (name ExampleStubs)
+  (public_name Revery.ExampleStubs)
   (c_names example_stubs)
   (c_flags :standard -Wall -Wextra -Werror)
   (js_of_ocaml (javascript_files example_stubs.js))
