--- a/examples/dune
+++ b/examples/dune
@@ -1,16 +1,8 @@
-(executables
- (names Examples)
+(library
+ (name lib_view)
  (preprocess
   (pps brisk-reconciler.ppx lwt_ppx))
- (package Revery)
- (public_names Examples)
+ (public_name Revery.lib_view)
  (modes native byte)
  (ocamlc_flags (:standard -custom))
- (libraries dynlink ExampleStubs skia str Revery flex timber))
-
-(install
- (section bin)
- (package Revery)
- (files Info.plist Roboto-Regular.ttf Roboto-RegularItalic.ttf
-   Roboto-Bold.ttf FontAwesome5FreeSolid.otf binary.dat outrun-logo.png
-   outrun-icon.png revery-icon.png))
+ (libraries dynlink ExampleStubs skia str Revery flex timber Revery_UI))
