--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "esy b dune runtest",
     "format": "esy #{os == 'windows' ? 'b' : ''} bash .ci/format.sh #{os}",
     "run": "esy x Examples",
-    "run-native": "esy b dune exec examples/run/Examples.exe #{self.target_dir}",
-    "run-bytecode": "esy b dune exec examples/run/Examples.bc #{self.target_dir}"
+    "run-native": "esy #{os == 'windows' ? 'b ' : ''}dune exec examples/run/Examples.exe #{self.target_dir}",
+    "run-bytecode": "esy #{os == 'windows' ? 'b ' : ''}dune exec examples/run/Examples.bc #{self.target_dir}"
   },
   "homepage": "https://github.com/bryphe/revery#readme",
   "esy": {
