--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "format": "esy b bash .ci/format.sh #{os}",
     "format:windows": "esy b .ci/format.sh",
     "run": "esy x Examples",
-    "run-native": "esy b dune exec examples/run/Examples.exe #{self.target_dir}",
-    "run-bytecode": "esy b dune exec examples/run/Examples.bc #{self.target_dir}"
+    "run-native": "esy #{os == 'windows' ? 'b ' : ''}dune exec examples/run/Examples.exe #{self.target_dir}",
+    "run-bytecode": "esy #{os == 'windows' ? 'b ' : ''}dune exec examples/run/Examples.bc #{self.target_dir}"
   },
   "homepage": "https://github.com/bryphe/revery#readme",
   "esy": {
