--- a/.ci/esy-check-hygiene.yml
+++ b/.ci/esy-check-hygiene.yml
@@ -1,7 +1,7 @@
 # Cross-platform set of build steps for building esy projects
 
 steps:
-  - script: npm install -g esy@0.5.8
+  - script: npm install -g @esy-nightly/esy
     displayName: 'npm install -g esy@0.5.8'
   - script: esy install
     displayName: 'esy install'
