--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3011",
-    "revery-text-wrap": "github:revery-ui/revery-text-wrap#005385c"
+    "revery-text-wrap": "github:revery-ui/revery-text-wrap#005385c",
+    "timber": "*"
   },
   "resolutions": {
     "@opam/cmdliner": "1.0.2",
     "yarn-pkg-config": "esy-ocaml/yarn-pkg-config#db3a0b6",
-    "esy-cmake": "prometheansacrifice/esy-cmake#2a47392def755"
+    "esy-cmake": "prometheansacrifice/esy-cmake#2a47392def755",
+    "timber": "glennsl/timber#37ffa07"
   },
   "devDependencies": {
     "ocaml": ">=4.6.0 <4.8.0",
