--- a/src/Core/dune
+++ b/src/Core/dune
@@ -4,4 +4,5 @@
     (js_of_ocaml (javascript_files file.js))
     (c_names file)
     (c_flags :standard -Wall -Wextra -Werror)
+    (preprocess (pps ppx_deriving.show))
     (libraries threads console.lib str lwt sdl2 flex fontkit Rench re Revery_Native revery-text-wrap timber))
