Dependency: reason-skia -> dae5a5e (#726)
* Bring back skia, with fixes

* Update lockfiles

--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
   },
   "homepage": "https://github.com/bryphe/revery#readme",
   "esy": {
+    "buildEnv": {
+      "PKG_CONFIG_PATH": "/usr/lib64/pkgconfig:$PKG_CONFIG_PATH"
+    },
+    "exportedEnv": {
+      "PKG_CONFIG_PATH": {
+	"val": "/usr/lib64/pkgconfig:$PKG_CONFIG_PATH",
+        "scope": "global"
+      }
+    },
     "build": [
       "dune build -p Revery -j4"
     ],
@@ -44,13 +53,16 @@
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3014",
+    "reason-skia": "github:revery-ui/reason-skia#dae5a5e",
     "revery-text-wrap": "github:revery-ui/revery-text-wrap#005385c",
     "timber": "*"
   },
   "resolutions": {
+    "@esy-ocaml/libffi": "esy-ocaml/libffi#599bc3567",
     "@opam/cmdliner": "1.0.2",
     "yarn-pkg-config": "esy-ocaml/yarn-pkg-config#db3a0b6",
     "esy-cmake": "prometheansacrifice/esy-cmake#2a47392def755",
+    "esy-skia": "revery-ui/esy-skia#91b10c9",
     "timber": "glennsl/timber#ae5de6c"
   },
   "devDependencies": {
