Extract out FontMetrics

--- a/src/Draw/dune
+++ b/src/Draw/dune
@@ -2,4 +2,4 @@
     (name Revery_Draw)
     (public_name Revery.Draw)
     (preprocess (pps lwt_ppx))
-    (libraries harfbuzz skia brisk-reconciler lwt lwt.unix sdl2 flex rebez.lib Revery_Core Revery_Math))
+    (libraries harfbuzz skia brisk-reconciler lwt lwt.unix sdl2 flex rebez.lib Revery_Core Revery_Font Revery_Math))
