--- a/src/Font/dune
+++ b/src/Font/dune
@@ -2,4 +2,4 @@
     (name Revery_Font)
     (public_name Revery.Font)
     (preprocess (pps lwt_ppx))
-    (libraries reason-font-manager lwt lwt.unix sdl2 flex rebez.lib Revery_Core Revery_Math))
+    (libraries harfbuzz reason-font-manager lwt lwt.unix sdl2 flex rebez.lib Revery_Core Revery_Math))
