--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "resolutions": {
     "@esy-ocaml/libffi": "esy-ocaml/libffi#599bc3567",
+    "reason-skia": "revery-ui/reason-skia#0b52e17",
     "@opam/cmdliner": "1.0.2",
     "esy-cmake": "prometheansacrifice/esy-cmake#2a47392def755",
     "timber": "glennsl/timber#ae065bb"
