Move benchmarks from example -> bench

--- a/bench/exe/dune
+++ b/bench/exe/dune
@@ -4,3 +4,8 @@
     (libraries ReveryBench.lib)
     (package ReveryBench)
 )
+
+(install
+    (section bin)
+    (package ReveryBench)
+    (files TestFont.ttf))
