--- a/src/dune
+++ b/src/dune
@@ -2,7 +2,7 @@
     (name Revery)
     (preprocess (pps brisk-reconciler.ppx lwt_ppx))
     (public_name Revery)
-    (libraries console.lib lwt lwt.unix sdl2 Revery_Core Revery_Font Revery_Draw Revery_Math Revery_UI Revery_UI_Components Revery_Native Revery_UI_Primitives Revery_UI_Hooks Revery_Utility))
+    (libraries console.lib lwt lwt.unix sdl2 Revery_Core Revery_Font Revery_Draw Revery_Math Revery_UI Revery_UI_Components Revery_Native Revery_UI_Primitives Revery_UI_Hooks Revery_Utility Revery_DevTools))
 (documentation
    (package Revery)
    (mld_files index))
