Revery_DevTools:   - switched to a pure-Lwt concurrency model   - added a basic routing API using the uri OPAM package   - added a static JSON API in order to make Revery visible from CDP Examples:   - started the Lwt promise loop from within Examples using Revery_Lwt

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@opam/httpaf-lwt-unix": "*",
     "@opam/websocketaf": "*",
     "@opam/websocketaf-lwt-unix": "*",
+    "@opam/uri": "^3.1.0",
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#0a2e476",
     "flex": "^1.2.2",
     "@reason-native/rely": "*",
