--- a/test/UI/dune
+++ b/test/UI/dune
@@ -3,4 +3,4 @@
     (library_flags (-linkall -g))
     (modules (:standard))
     (preprocess (pps brisk-reconciler.ppx))
-    (libraries Revery_UI Revery_UI_Primitives Revery_Math rely.lib))
+    (libraries Revery_UI Revery_UI_Primitives Revery_UI_Hooks Revery_Math rely.lib))
