--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "reperf": "^1.4.0",
     "@reason-native/console": "^0.0.3",
     "reason-font-manager": "^2.0.0",
-    "reason-harfbuzz": "1.91.5004",
+    "reason-harfbuzz": "^1.91.5004",
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3016",
