--- a/package.json
+++ b/package.json
@@ -55,14 +55,16 @@
     "reason-sdl2": "^2.10.3016",
     "reason-skia": "github:revery-ui/reason-skia#69743dc",
     "revery-text-wrap": "github:revery-ui/revery-text-wrap#005385c",
-    "timber": "*"
+    "timber": "*",
+    "libscroll": "*"
   },
   "resolutions": {
     "@esy-ocaml/libffi": "esy-ocaml/libffi#c61127d",
     "@opam/cmdliner": "1.0.2",
     "esy-cmake": "prometheansacrifice/esy-cmake#2a47392def755",
     "timber": "glennsl/timber#ae065bb",
-    "reason-harfbuzz": "revery-ui/reason-harfbuzz#0848520"
+    "reason-harfbuzz": "revery-ui/reason-harfbuzz#0848520",
+    "libscroll": "link:../libscroll-re"
   },
   "devDependencies": {
     "ocaml": "~4.8",
