--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -13,11 +13,23 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install esy
         run: npm install -g esy
+      - name: Try to restore dependencies cache
+        id: deps-cache-macos
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.print_esy_cache.outputs.esy_cache }}
+          key: macOS-latest-4.08-${{ hashFiles('doc.esy.lock/index.json') }}
       - name: Install doc dependencies
         run: esy @doc install
       - name: Install doc dependencies
+        if: steps.deps-cache-macos.outputs.cache-hit != 'true'
         run: esy @doc build-dependencies --release
-      - run: ehco GITHUB_ACTOR
+      - name: set doc_path
+        id: print_esy_doc_path
+        run: echo ::set-output name=doc_path::$(esy "@doc" echo "#{self.target_dir / 'default' / '_doc' / '_html'}")
+      - run: ehco $GITHUB_ACTOR $DOC_PATH
+        env:
+          DOC_PATH: ${{ steps.print_esy_doc_path.outputs.doc_path }}
   lint:
     name: Lint lockdir, autoformat
     runs-on: macos-latest
