--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install esy
         run: npm install -g esy
-      - name: Install doc dependencies
+      - name: Solve doc dependencies
         run: esy @doc install
       - name: Print esy cache
         id: print_esy_cache
@@ -27,6 +27,8 @@ jobs:
       - name: Install doc dependencies
         if: steps.deps-cache-macos.outputs.cache-hit != 'true'
         run: esy @doc build-dependencies --release
+      - name: Generate docs
+        run: esy @doc --release
       - name: set doc_path
         id: print_esy_doc_path
         run: echo ::set-output name=doc_path::$(esy "@doc" echo "#{self.target_dir / 'default' / '_doc' / '_html'}")
@@ -35,7 +37,7 @@ jobs:
           ls $DOC_PATH
         env:
           DOC_PATH: ${{ steps.print_esy_doc_path.outputs.doc_path }}
-      - name: Push if it is not
+      - name: Push to gh-pages branch of user fork
         run: |
           git remote set-url --push origin https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_ACTOR/revery
           git status
