--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -31,7 +31,7 @@ jobs:
         run: esy @doc build --release
       - name: set doc_path
         id: print_esy_doc_path
-        run: echo ::set-output name=doc_path::$(esy "@doc" echo "#{self.target_dir / 'default' / '_doc' / '_html'}")
+        run: echo ::set-output name=doc_path::$(realpath $(esy "@doc" echo "#{self.target_dir / 'default' / '_doc' / '_html'}"))
       - run: |
           echo $GITHUB_ACTOR $DOC_PATH
           find . -name "*.html"
